// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Solitaire.vue matches game lost snapshot 1`] = `
<div class="solitaire">
  <board-stub></board-stub>
  <!---->
  <gameoverlay-stub data-test="game-lost">
    Sorry, no more Moves!
  </gameoverlay-stub>
  <rules-stub></rules-stub>
</div>
`;

exports[`Solitaire.vue matches game won snapshot 1`] = `
<div class="solitaire">
  <board-stub></board-stub>
  <gameoverlay-stub data-test="game-won">
    Congratulations, you win!
  </gameoverlay-stub>
  <!---->
  <rules-stub></rules-stub>
</div>
`;

exports[`Solitaire.vue matches snapshot 1`] = `
<div class="solitaire">
  <board-stub></board-stub>
  <!---->
  <!---->
  <rules-stub></rules-stub>
</div>
`;
